添加多选功能

--- a/public/tinymce/skins/content/default/content.css
+++ b/public/tinymce/skins/content/default/content.css
@@ -65,3 +65,12 @@ code {
   margin-right: 1.5rem;
   padding-right: 1rem;
 }
+.mce-pagebreak {
+  border: 1px dashed #aaa;
+  cursor: default;
+  display: block;
+  height: 5px;
+  margin-top: 15px;
+  page-break-before: always;
+  width: 100%;
+}
